--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <main>
     <section id="planet-section">
       <h2>Selected Planets Overview</h2>
-        <table class="planet-table">
+        <table class="planet-table image-row">
           <thead>
             <tr>
               <th class="planet-header">Characteristic</th>
@@ -78,6 +78,7 @@
         </table>
     </section>
     <section id="images-section">
+      <link rel="stylesheet" href="styles.css">
        <h2>Planet Images</h2>
        <div class="image-gallery">
           <figure>
