--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <section id="images-section">
       <link rel="stylesheet" href="styles.css">
        <h2>Planet Images</h2>
-       <div class="image-gallery">
+       <div class="image-gallery image-row">
           <figure>
             <img src="images/mercury.jpg" alt="Mercury Planet" class="planet-image">
             <figcaption>Mercury</figcaption>
